--- a/Website/index.html
+++ b/Website/index.html
@@ -47,7 +47,7 @@
 
                 <div class="first-container-div">
                     <img class="start-page-picture" src="Images/startPageImage.png" alt="Mother and son">
-                    <div class='box'> <h1>SCREAMING CAT STUDIO</h1> </div>
+                    <div class='box'> <h2>SCREAMING CAT STUDIO</h2> </div>
                 </div>
                 
             </section>
@@ -55,7 +55,17 @@
             <section class="container-section">
                 <div class="about-use-div">
                     <div class="about-us-text-div">
-                        <p>Bla bla bla</p>
+
+                        <h1>About Studio</h1>
+
+                        <p class="about-us-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                            when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                            It has survived not only five centuries, but also the leap into electronic typesetting, 
+                            remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset 
+                            sheets containing Lorem Ipsum passages, and more recently with desktop publishing software 
+                            like Aldus PageMaker including versions of Lorem Ipsum.
+                        </p>
                     </div>
 
                     <div class="about-use-image-div">
@@ -66,7 +76,10 @@
             </section>
             
             <section class="container-section" id="featured-work">
-                <h1>Third Page</h1>
+                <div class="featured-work-div">
+                    <img class="featured-work-image" src="Images/mermaidposter.png" alt="Mermaids talking">
+                    <a class='box featured-button' href="">Featured works</a>
+                </div>
             </section>
 
             <section class="container-section" id="contact-us">
