--- a/Website/index.html
+++ b/Website/index.html
@@ -51,7 +51,7 @@
 
                 <div class="first-container-div">
                     <img class="start-page-picture" src="Images/startPageImage.png" alt="Mother and son">
-                    <div class='box'> <h2>SCREAMING CAT STUDIO</h2> </div>
+                    <div class='box slide-from-top'> <h2>SCREAMING CAT STUDIO</h2> </div>
                 </div>
                 
             </section>
